Added svg saving capabilities

--- a/pom.xml
+++ b/pom.xml
@@ -202,5 +202,12 @@
             <artifactId>jfreechart</artifactId>
             <version>1.5.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.jfree/jfreesvg -->
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreesvg</artifactId>
+            <version>3.3</version>
+        </dependency>
     </dependencies>
 </project>
