--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.github.aerisnju</groupId>
     <artifactId>mylizzie</artifactId>
-    <version>2.0.180413</version>
+    <version>2.0.180415</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -48,21 +48,22 @@
                 <version>3.0.2</version>
 
                 <!-- Because shade plugins are used, we do not need to copy libs. -->
-                <!--<executions>-->
-                <!--<execution>-->
-                <!--<id>copy-dependencies</id>-->
-                <!--<phase>package</phase>-->
-                <!--<goals>-->
-                <!--<goal>copy-dependencies</goal>-->
-                <!--</goals>-->
+                <!-- However, I still copy them for references. -->
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
 
-                <!--<configuration>-->
-                <!--&lt;!&ndash; Only copy runtime libraries, excluding test libraries. &ndash;&gt;-->
-                <!--<includeScope>runtime</includeScope>-->
-                <!--<outputDirectory>${project.build.directory}/distribution/lib</outputDirectory>-->
-                <!--</configuration>-->
-                <!--</execution>-->
-                <!--</executions>-->
+                        <configuration>
+                            <!-- Only copy runtime libraries, excluding test libraries. -->
+                            <includeScope>runtime</includeScope>
+                            <outputDirectory>${project.build.directory}/distribution/lib</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
 
             <plugin>
@@ -253,5 +254,19 @@
             <artifactId>miglayout-swing</artifactId>
             <version>5.1</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.zaxxer/nuprocess -->
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>nuprocess</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.eclipse.collections/eclipse-collections &ndash;&gt;-->
+        <!--<dependency>-->
+        <!--<groupId>org.eclipse.collections</groupId>-->
+        <!--<artifactId>eclipse-collections</artifactId>-->
+        <!--<version>9.1.0</version>-->
+        <!--</dependency>-->
     </dependencies>
 </project>
