--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,14 @@
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>wagner.stephanie.lizzie.Lizzie</mainClass>
                                 </transformer>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
+                                    <resources>
+                                        <resource>META-INF/ECLIPSE_.RSA</resource>
+                                        <resource>META-INF/ECLIPSE_.SF</resource>
+                                        <resource>META-INF/DEPENDENCIES</resource>
+                                    </resources>
+                                </transformer>
                             </transformers>
                             <outputDirectory>${project.build.directory}/distribution</outputDirectory>
                             <dependencyReducedPomLocation>
@@ -262,11 +270,11 @@
             <version>1.1.3</version>
         </dependency>
 
-        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.eclipse.collections/eclipse-collections &ndash;&gt;-->
-        <!--<dependency>-->
-        <!--<groupId>org.eclipse.collections</groupId>-->
-        <!--<artifactId>eclipse-collections</artifactId>-->
-        <!--<version>9.1.0</version>-->
-        <!--</dependency>-->
+        <!-- https://mvnrepository.com/artifact/org.eclipse.collections/eclipse-collections -->
+        <dependency>
+            <groupId>org.eclipse.collections</groupId>
+            <artifactId>eclipse-collections</artifactId>
+            <version>9.1.0</version>
+        </dependency>
     </dependencies>
 </project>
