--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,10 @@
 
     <groupId>org.github.aerisnju</groupId>
     <artifactId>mylizzie</artifactId>
-    <version>2.0.180507.2</version>
+    <version>2.0.180509</version>
 
     <properties>
+        <app.mainClass>wagner.stephanie.lizzie.Lizzie</app.mainClass>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <log4j.version>2.11.0</log4j.version>
     </properties>
@@ -35,7 +36,7 @@
                             <!-- Because shade plugins are used, we do not need to copy libs. -->
                             <!--<addClasspath>true</addClasspath>-->
                             <!--<classpathPrefix>lib/</classpathPrefix>-->
-                            <mainClass>wagner.stephanie.lizzie.Lizzie</mainClass>
+                            <mainClass>${app.mainClass}</mainClass>
                         </manifest>
                     </archive>
                     <outputDirectory>${project.build.directory}/distribution</outputDirectory>
@@ -86,7 +87,10 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>wagner.stephanie.lizzie.Lizzie</mainClass>
+                                    <manifestEntries>
+                                        <Main-Class>${app.mainClass}</Main-Class>
+                                        <Lizzie-Version>${project.version}</Lizzie-Version>
+                                    </manifestEntries>
                                 </transformer>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
@@ -282,6 +286,13 @@
             <groupId>org.jtrim2</groupId>
             <artifactId>jtrim-image</artifactId>
             <version>2.0.3</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.jcabi/jcabi-manifests -->
+        <dependency>
+            <groupId>com.jcabi</groupId>
+            <artifactId>jcabi-manifests</artifactId>
+            <version>1.1</version>
         </dependency>
     </dependencies>
 </project>
