--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.github.aerisnju</groupId>
     <artifactId>mylizzie</artifactId>
-    <version>2.0.180521</version>
+    <version>2.0.180522</version>
 
     <properties>
         <app.mainClass>wagner.stephanie.lizzie.Lizzie</app.mainClass>
@@ -189,7 +189,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.4</version>
+            <version>2.8.5</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.pcollections/pcollections -->
@@ -300,6 +300,13 @@
             <groupId>com.jcabi</groupId>
             <artifactId>jcabi-manifests</artifactId>
             <version>1.1</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.parboiled/parboiled-java -->
+        <dependency>
+            <groupId>org.parboiled</groupId>
+            <artifactId>parboiled-java</artifactId>
+            <version>1.1.8</version>
         </dependency>
     </dependencies>
 </project>
