--- a/pom.xml
+++ b/pom.xml
@@ -281,6 +281,13 @@
             <version>5.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/info.clearthought/table-layout -->
+        <dependency>
+            <groupId>info.clearthought</groupId>
+            <artifactId>table-layout</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/com.zaxxer/nuprocess -->
         <dependency>
             <groupId>com.zaxxer</groupId>
